--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
-  "name": "my-gulp",
+  "name": "gulp-start",
   "version": "1.0.0",
-  "description": "",
+  "description": "start gulp",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/shock-dev/my-gulp.git"
-  },
-  "author": "shock <shock.work@mail.ru>",
+  "author": "Vadim Prokopchuk",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/shock-dev/my-gulp/issues"
-  },
-  "homepage": "https://github.com/shock-dev/my-gulp#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
-    "del": "^5.1.0",
+    "browser-sync": "^2.26.5",
+    "del": "^5.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2",
-    "normalize.css": "^8.0.1",
+    "normalize.css": "^8.0.1"
+  },
+  "dependencies": {
     "slick-carousel": "^1.8.1"
   }
 }
