--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .idea/
+app/css/
 # Created by https://www.toptal.com/developers/gitignore/api/node,webstorm,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,webstorm,windows
 
