--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-uglify-es": "^2.0.0",
     "webpack": "^5.11.0",
     "webpack-stream": "^6.1.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
